--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   logger: ^2.3.0
   pdf: ^3.10.8
   printing: ^5.12.0
+  http_parser: ^4.0.0
+  mime: ^1.0.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
