--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   printing: ^5.12.0
   http_parser: ^4.0.0
   mime: ^1.0.0
+  path_provider: ^2.0.2
+  path: ^1.8.1
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
